# picam

./: LICENSE  README.md  picam.py  setup.py
examples/: motiontest.py
package/: setup.py
package/picam/: __init__.py  camera.py
src/: CMakeLists.txt  RaspiCamControl.c  picam.c  picam.h  picammodule.c
